--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -16,8 +16,9 @@
 \geomLandscape
 %\CormorantFonts
 %\EBGaramondFonts
+\LibertinusFonts
 %\XITSFonts
-\STIXTwoFonts
+%\STIXTwoFonts
 %-----------------------------------------------------------------
 \title{Font tests}
 \author{John Alan McDonald 
