11 preliminary font collections, including TeX Gyre.

--- a/shared/feferman.tex
+++ b/shared/feferman.tex
@@ -130,14 +130,14 @@ What's the difference between $\Set{A} \sim \PowerSet{\Set{A}}$
 ($\card(\Set{A})=\card(\Set{\PowerSet{\Set{A}}})$
  'externally' vs 'internally'?
 
-\textlb{\Godel's incompleteness theorems:}
+\textsb{\Godel's incompleteness theorems:}
 don't follow completely.
 
-\textlb{Postscript on second-order logic:}
+\textsb{Postscript on second-order logic:}
 ``second-order logic cannot be axiomatized effectively.''
 Don't follow much of argument.
 
-\textlb{Elimination of the law of the excluded middle:}
+\textsb{Elimination of the law of the excluded middle:}
 \hfill\break
 LEM implies (for Hilbert) completed infinity (?).
 \hfill\break
@@ -150,12 +150,12 @@ a true statement in HA.
 This (somehow) implies that a finite consistency proof
 of PA would not eliminate completed infinity.
 
-\textlb{The elusiveness of Cantor's continuum problem:}
+\textsb{The elusiveness of Cantor's continuum problem:}
 \hfill\break
 Hilbert's program can't solve the continuum problem.
 
 
-\textlb{New axioms?}
+\textsb{New axioms?}
 \hfill\break
 Dubiousness of large cardinals.
 \hfill\break
@@ -382,17 +382,17 @@ $\forall x (F(n) = 0)$ where $F$ is primitive recursive.
 $\exists x (F(n) \neq 0)$ (negations of statement in $\Pi^0_1$).
 \item[$\Pi^0_k$] sequence of $k$ alternating quantifiers,
 starting with $\forall x$.
-\textlb{(Why alternating?)}
+\textsb{(Why alternating?)}
 \item[$\Sigma^0_k$] sequence of $k$ alternating quantifiers,
 starting with $\exists x$.
-\textlb{(Why alternating?)}
+\textsb{(Why alternating?)}
 \item[$\Delta^0_k$] statements that are in both $\Pi^0_k$
 and $\Sigma^0_k$. 
-\textlb{(How is that possible?)}
+\textsb{(How is that possible?)}
 \end{description}
 Superscript $0$ is above classes refers to the fact that
 quantified variables range over $x,y,\ldots \in \Space{N}$.
-\textlb{(first order logic/arithmetic?)}
+\textsb{(first order logic/arithmetic?)}
 When we add variables $X,Y,\ldots \subseteq \Space{N}$,
 then the classes are $\Pi^1_k, \Sigma^1_k, \Delta^1_k$.
 
@@ -409,7 +409,7 @@ Collecting all arities into a single class:
 \exists X \forall n \left[ (n \in X) \Leftrightarrow P(n) \right]
 \end{equation}
 where $\mathcal{F}$ is a class of formulas 
-\textlb{(meaning $\Pi^0_k$ or $\Sigma^0_k$?)}
+\textsb{(meaning $\Pi^0_k$ or $\Sigma^0_k$?)}
 and $P \in \mathcal{F}$.
 
 For formulas in $\mathcal{F}$ and its complement,
@@ -420,7 +420,7 @@ For formulas in $\mathcal{F}$ and its complement,
 \exists X \forall n \left[ (n \in X) \Leftrightarrow P(n) \right]
 \end{equation}
 where $P \in \mathcal{F}$ and $\sim Q \in \mathcal(F)$.
-\textlb{
+\textsb{
 (Is ``$\sim Q$'' the same as ``$\lnot Q$'', ie, 
 ``$(\text{not}\, Q)$''?)}
 
