--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -14,11 +14,19 @@
 \documentclass{PalisadesLakesArticle}
 \geomHDTV
 \geomLandscape
+
+%\AsanaFonts
 %\CormorantFonts
 %\EBGaramondFonts
-\LibertinusFonts
+\ErewhonFonts
+%\LibertinusFonts
+%\BonumFonts
+%\PagellaFonts
+%\ScholaFonts
+%\TermesFonts
 %\XITSFonts
 %\STIXTwoFonts
+
 %-----------------------------------------------------------------
 \title{Font tests}
 \author{John Alan McDonald 
