--- a/tests/math.tex
+++ b/tests/math.tex
@@ -14,9 +14,16 @@
 \documentclass[12pt]{PalisadesLakesArticle}
 \geomHDTV
 \geomLandscape
+
+%\AsanaFonts
 %\CormorantFonts
 %\EBGaramondFonts
-\LibertinusFonts
+\ErewhonFonts
+%\LibertinusFonts
+%\BonumFonts
+%\PagellaFonts
+%\ScholaFonts
+%\TermesFonts
 %\XITSFonts
 %\STIXTwoFonts
 
